<resources>
    <string name="app_name">sensores_java</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sensores</string>
    <string name="nav_header_subtitle">g.naranjooyola@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_gps">GPS</string>
    <string name="menu_battery">Batería</string>
    <string name="menu_biometric">Biometría</string>
    <string name="menu_light">Luz</string>
</resources>