<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.naranjo.android.sensores_java.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.naranjo.android.sensores_java.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.naranjo.android.sensores_java.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_gps"
        android:name="com.naranjo.android.sensores_java.ui.sensors.GPSFragment"
        android:label="@string/menu_gps"
        tools:layout="@layout/fragment_gps" />
    <fragment
        android:id="@+id/nav_battery"
        android:name="com.naranjo.android.sensores_java.ui.sensors.BatteryFragment"
        android:label="@string/menu_battery"
        tools:layout="@layout/fragment_battery" />
    <fragment
        android:id="@+id/nav_biometric"
        android:name="com.naranjo.android.sensores_java.ui.sensors.BiometricFragment"
        android:label="@string/menu_biometric"
        tools:layout="@layout/fragment_biometric" />
</navigation>